--- a/.github/workflows/.release.yml
+++ b/.github/workflows/.release.yml
@@ -27,16 +27,16 @@ jobs:
         version=$(echo ${GITHUB_REF:10} | cut -c 2-)
         echo "GITHUB_VERSION=${version}" >> $GITHUB_ENV
 
-    - name: Login to Docker Hub
-      run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+    # - name: Login to Docker Hub
+    #   run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-    - name: Build the tagged Docker image
-      run: docker build . --file Dockerfile --tag hewlettpackardenterprise/hpe-oneview-sdk-for-ansible-collection:${{ env.GITHUB_REF }}-OV7.2
+    # - name: Build the tagged Docker image
+    #   run: docker build . --file Dockerfile --tag hewlettpackardenterprise/hpe-oneview-sdk-for-ansible-collection:${{ env.GITHUB_REF }}-OV7.2
 
-    - name: Push the tagged Docker image
-      run: docker push hewlettpackardenterprise/hpe-oneview-sdk-for-ansible-collection:${{ env.GITHUB_REF }}-OV7.2
+    # - name: Push the tagged Docker image
+    #   run: docker push hewlettpackardenterprise/hpe-oneview-sdk-for-ansible-collection:${{ env.GITHUB_REF }}-OV7.2
 
-    - name: Build and publish
-      run: |
-        ansible-galaxy collection build .
-        ansible-galaxy collection publish hpe-oneview-${{ env.GITHUB_VERSION }}.tar.gz --api-key="${{ secrets.GALAXY_API_TOKEN }}"
+    # - name: Build and publish
+    #   run: |
+    #     ansible-galaxy collection build .
+    #     ansible-galaxy collection publish hpe-oneview-${{ env.GITHUB_VERSION }}.tar.gz --api-key="${{ secrets.GALAXY_API_TOKEN }}"
