--- a/.github/workflows/pullrequestforrelease.yml
+++ b/.github/workflows/pullrequestforrelease.yml
@@ -21,4 +21,4 @@ jobs:
         pr_body: ":crown: *An automated PR*"              # Full markdown support, requires pr_title to be set
         pr_template: ".github/PULL_REQUEST_TEMPLATE.md"   # Path to pull request template, requires pr_title to be set, excludes pr_body                         
         pr_allow_empty: true
-        github_token: ${{ secrets.CD_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
