--- a/.github/workflows/pullrequestforrelease.yml
+++ b/.github/workflows/pullrequestforrelease.yml
@@ -19,7 +19,7 @@ jobs:
         destination_branch: "master" # If blank, default: master
         pr_label: "automation" 
         pr_title: "Testing automation" # Title of pull request
-        pr_reviewer: "alisha-k-kalladassery" #"nabhajit-ray,AvijitOS"
+        pr_reviewer: "alisha-k-kalladassery,nabhajit-ray,AvijitOS"
         pr_body: ":crown: *An automated PR*"              # Full markdown support, requires pr_title to be set
         pr_template: ".github/PULL_REQUEST_TEMPLATE.md"   # Path to pull request template, requires pr_title to be set, excludes pr_body                         
         pr_allow_empty: true
